--- a/index.html
+++ b/index.html
@@ -428,7 +428,8 @@
                 const qBtn = document.createElement('button');
                 qBtn.textContent = q.label;
                 qBtn.style.flex = '1';
-                qBtn.onclick = () => openPdf(q.QPDFName, q.page);
+                qBtn.onclick = () => openPdf(q.QPDFName,       q.page);
+                gBtn.onclick = () => openPdf(q.GPDFName, q.gabaritoPage);
                 row.appendChild(qBtn);
 
                 const gBtn = document.createElement('button');
