--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             top: 0; left: 0;
             width: 100%; height: 100%;
             background: rgba(0,0,0,0.9);
-            display: none;
+            display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
