--- a/index.html
+++ b/index.html
@@ -185,12 +185,11 @@
             top: 0; left: 0;
             width: 100%; height: 100%;
             background: rgba(0,0,0,0.9);
-            display: center;
+            display: none;
             flex-direction: column;
             align-items: center;
             justify-content: center;
             z-index: 1000;
-            overflow-y: auto; 
         }
         #pdfCanvas {
             max-width: 100%;
@@ -459,7 +458,7 @@
             });
         }
 
-async function openPdf(pdfName, pages) {
+        async function openPdf(pdfName, pages) {
   // garante que pages seja sempre array
   const pageNums = Array.isArray(pages) ? pages : [pages];
 
@@ -474,11 +473,12 @@ async function openPdf(pdfName, pages) {
   // para cada página solicitada, cria um canvas e renderiza
   for (let num of pageNums) {
     const pdfPage = await pdf.getPage(num);
-    const viewport = pdfPage.getViewport({ scale: 1.7 });
+    const viewport = pdfPage.getViewport({ scale: 1.5 });
 
     const canvas = document.createElement('canvas');
     canvas.width  = viewport.width;
     canvas.height = viewport.height;
+    canvas.style.margin = '16px 0';           // espaçamento entre páginas
     pdfContainer.appendChild(canvas);
 
     const ctx = canvas.getContext('2d');
