70Perfeito+PositionFlex.html

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         /* ===== Novo: Estilos do visualizador de PDF ===== */
         #pdfViewerContainer {
-            position: fixed;
+            position: flex;
             top: 0; left: 0;
             width: 100%; height: 100%;
             background: rgba(0,0,0,0.9);
@@ -190,6 +190,7 @@
             align-items: center;
             justify-content: center;
             z-index: 1000;
+            overflow-y: auto; 
         }
         #pdfCanvas {
             max-width: 100%;
