--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
 
         /* ===== Novo: Estilos do visualizador de PDF ===== */
         #pdfViewerContainer {
-            position: flex;
+            position: center;
             top: 0; left: 0;
-            width: 100%; height: 100%;
+            width: 80%; height: 80%;
             background: rgba(0,0,0,0.9);
             display: none;
             flex-direction: column;
