--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         /* ===== Novo: Estilos do visualizador de PDF ===== */
         #pdfViewerContainer {
-            position: center;
+            position: fixed;
             top: 0; left: 0;
             width: 80%; height: 80%;
             background: rgba(0,0,0,0.9);
