--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             height: 33px;
             display: inline-flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             border-radius: 4px;
             color: #000;
             font-weight: bold;
