botão de fechar pdf sem rodar

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 #closePdfBtn:hover {
     background: rgba(30,30,30,0.9);
-    transform: scale(1.1) rotate(90deg);
+    transform: scale(1.1);
 }
     </style>
 </head>
